clusters/9ka/ingress/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx
  namespace: ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  ingress:
  - fromEntities:
    - host
    toPorts:
    - ports:
      - port: "metrics"
        protocol: TCP
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "http"
        protocol: TCP
      - port: "https"
        protocol: TCP
      - port: "webhook"
        protocol: TCP
  egress:
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
