clusters/9ka/ingress/networkpolicy-dex.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-egress-dex
  namespace: ingress
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dex
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: dex
          app.kubernetes.io/name: dex
    ports:
    - protocol: TCP
      port: 5556
