clusters/9ka/ingress/networkpolicy-flux.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-egress-flux
  namespace: ingress
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: flux-system
      podSelector:
        matchLabels:
          app: notification-controller
    ports:
    - protocol: TCP
      port: 9292
