clusters/9ka/ingress/networkpolicy-influxdb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-egress-influxdb
  namespace: ingress
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: influxdb
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: influxdb
          app.kubernetes.io/name: influxdb
    ports:
    - protocol: TCP
      port: api
