clusters/9ka/ingress/networkpolicy-nextcloud.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-egress-nextcloud
  namespace: ingress
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nextcloud
      podSelector:
        matchLabels:
          app.kubernetes.io/component: app
          app.kubernetes.io/name: nextcloud
    ports:
    - protocol: TCP
      port: http
