clusters/9ka/ingress/networkpolicy-oauth2-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-egress-oauth2-proxy
  namespace: ingress
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: oauth2-proxy
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: oauth2-proxy
          app.kubernetes.io/name: oauth2-proxy
    ports:
    - protocol: TCP
      port: 4180
