clusters/9ka/ingress/networkpolicy-pdns-admin.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-egress-pdns-admin
  namespace: ingress
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: pdns-admin
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: pdns-admin-efgh
          app.kubernetes.io/name: pdns-admin
    ports:
    - protocol: TCP
      port: http
