clusters/9ka/ingress/networkpolicy-vaultwarden.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-egress-vaultwarden
  namespace: ingress
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: vaultwarden
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: vaultwarden
          app.kubernetes.io/name: vaultwarden
    ports:
    - protocol: TCP
      port: websocket
    - protocol: TCP
      port: http
